assets/css/components/_footer.scss
@import 'base/mixins';

$footer-bg: rgba(255, 255, 255, 0.1);
$footer-border-color: rgba(255, 255, 255, 0.18);
$footer-border: 1px solid $footer-border-color;

$footer-radius: $radius-lg;

$footer-blur: 10px;

$footer-padding-top: 10px;
$footer-padding-sides: 25px;
$footer-padding-bottom: 5px;

$footer-margin-top: 0px;
$footer-margin-sides: 10px;
$footer-margin-bottom: 5px;

$footer-width: 100vw;

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: $footer-bg;
    backdrop-filter: blur($footer-blur);
    transform: translate3d(0, 0, 0);
    padding: $footer-padding-top $footer-padding-sides $footer-padding-bottom;
    box-sizing: border-box;
    color: $color-text;
    z-index: 9999;
    transition: position 0.2s;
    position: fixed;
    bottom: 0;

    @include mobile {
        width: $footer-width;
        border-top: $footer-border;
        border-radius: 0;
        margin: 0;
    }

    @include notMobile {
        --footer-width: $footer-width;
        --footer-margin-sides: $footer-margin-sides;
        width: calc(var(--footer-width) - var(--footer-margin-sides) * 2);
        border: $footer-border;
        border-radius: $footer-radius;
        margin: $footer-margin-top $footer-margin-sides $footer-margin-bottom;
    }

    body.height-overflow & {
        position: static;
    }

    & span {
        font-size: $font-size-base;

        & a {
            color: $color-text;
            text-decoration: none;

            &:hover {
                text-decoration: underline;
            }
        }

        &#copyright {
            z-index: 4;
            font-style: italic;
            margin: auto;

            @include notMobile {
                position: absolute;
                left: 0;
                right: 0;
                text-align: center;
            }
        }

        &#repo,
        &#contact {
            z-index: 5;
            @include mobile {
                display: none;
            }
        }
    }
}

